tests/test_assets/semantic/invalid/expressions/floating_signed_zero_oracles.expected
semantic error at line 23: duplicate switch case
semantic error at line 31: duplicate switch case
semantic error at line 39: duplicate switch case
semantic error at line 47: duplicate switch case
4 semantic errors generated.
